--- a/style.css
+++ b/style.css
@@ -35,4 +35,4 @@ line-height: 0;
    }
    @media only screen and (max-width: 250px) {
     #loading, .Div{font-size:14px !important}
-   }
+   }amarna
